Fixed spacing

--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -3,17 +3,15 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 50px;
+    gap: 5%;
     margin-bottom: 5%;
 }
 
-.card-container Button {
-    margin-top: 5px;
-}
 
 .card-text-container {
     display: flex;
     flex-direction: column;
+    gap: 5%;
     width: 100%;
 }
 
@@ -35,7 +33,7 @@
 .card-text-container p {
     text-align: left;
     font-size: 16px;
-    margin-bottom: 2px;
+    margin-bottom: 20px;
 }
 
 .row {
